--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yakında Hizmetinizdeyiz</title>
+    <link rel="stylesheet" href="styles.css"> <!-- CSS dosyasını bağlayacağız -->
 </head>
 <body>
-    <h1>Yakında Hizmetinizdeyiz!</h1>
-    <p>Siteyi hazırlıyoruz, çok yakında yayına alacağız.</p>
+    <div class="container">
+        <header>
+            <img src="logo.png" alt="Şirket Logo" class="logo"> <!-- Şirket logosu -->
+        </header>
+
+        <main>
+            <h1>Yakında Hizmetinizdeyiz!</h1>
+            <p class="message">Şu anda siteyi hazırlıyoruz, yakında hizmetinizde olacağız.</p>
+            <p class="contact">İletişim için: <a href="mailto:info@ornekfirma.com">info@ornekfirma.com</a></p> <!-- İletişim maili -->
+        </main>
+
+        <footer>
+            <p>&copy; 2025 Şirket Adı. Tüm hakları saklıdır.</p>
+        </footer>
+    </div>
 </body>
 </html>
