--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
     <div class="container">
         <header>
-            <img src="logo.png" alt="Şirket Logo" class="logo"> <!-- Şirket logosu -->
+            <img src="file:///C:/Users/ozgun/Desktop/%C5%9Firket/logo.png" alt="Şirket Logo" class="logo"> <!-- Şirket logosu -->
         </header>
 
         <main>
             <h1>Yakında Hizmetinizdeyiz!</h1>
             <p class="message">Şu anda siteyi hazırlıyoruz, yakında hizmetinizde olacağız.</p>
-            <p class="contact">İletişim için: <a href="mailto:info@ornekfirma.com">info@ornekfirma.com</a></p> <!-- İletişim maili -->
+            <p class="contact">İletişim için: <a href="mailto:ozgun.aydin@cladeng.com">info@ornekfirma.com</a></p> <!-- İletişim maili -->
         </main>
 
         <footer>
