--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <main>
             <h1>Yakında Hizmetinizdeyiz!</h1>
             <p class="message">Şu anda siteyi hazırlıyoruz, yakında hizmetinizde olacağız.</p>
-            <p class="contact">İletişim için: <a href="mailto:ozgun.aydin@cladeng.com">info@ornekfirma.com</a></p> <!-- İletişim maili -->
+            <p class="contact">İletişim için: <a href="mailto:ozgun.aydin@cladeng.com">ozgun.aydin@cladeng.com</a></p> <!-- İletişim maili -->
         </main>
 
         <footer>
