--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <img src="file:///C:/Users/ozgun/Desktop/%C5%9Firket/logo.png" alt="Şirket Logo" class="logo"> <!-- Şirket logosu -->
+            <img src="logo.png" alt="Şirket Logo" class="logo"> <!-- Şirket logosu -->
         </header>
 
         <main>
