--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CladEng - Facade Consultancy</title>
+    <title>CLADENG - Facade Engineering and Consultancy</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <nav>
-            <div class="logo">CladEng</div>
+            <div class="logo">CLADENG</div>
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About Us</a></li>
@@ -30,13 +30,13 @@
         <div class="team-grid">
             <div class="team-member">
                 <img src="team1.jpg" alt="Team Member">
-                <h3>John Doe</h3>
+                <h3>Özgün Aydın</h3>
                 <p>Facade Engineer</p>
             </div>
             <div class="team-member">
                 <img src="team2.jpg" alt="Team Member">
-                <h3>Jane Smith</h3>
-                <p>Structural Consultant</p>
+                <h3>Özgün Aydın</h3>
+                <p>Designer</p>
             </div>
         </div>
     </section>
@@ -57,7 +57,7 @@
     </section>
     
     <footer>
-        <p>&copy; 2025 CladEng. All rights reserved.</p>
+        <p>&copy; 2025 CLADENG. All rights reserved.</p>
     </footer>
 </body>
 </html>
