--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yakında Hizmetinizdeyiz | CladEng</title>
+    <title>Yakında Hizmetinizdeyiz | CLADENG</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="overlay"></div>
     <div class="content">
-        <img src="your-logo.png" alt="CladEng Logo" class="logo">
+        <img src="logo.png" alt="CLADENG Logo" class="logo">
         <h1>Yakında Hizmetinizdeyiz</h1>
         <p>Profesyonel cephe danışmanlığı çözümleriyle yakında sizlerleyiz.</p>
         <div class="contact">
-            <p>Bize ulaşın: <a href="mailto:info@cladeng.com">info@cladeng.com</a></p>
+            <p>Bize ulaşın: <a href="mailto:ozgun.aydin@cladeng.com">ozgun.aydin@cladeng.com</a></p>
         </div>
     </div>
 </body>
