--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <img src="logo.png" alt="CladEng Logo" class="logo">
+    <div class="overlay"></div>
+    <div class="content">
+        <img src="your-logo.png" alt="CladEng Logo" class="logo">
         <h1>Yakında Hizmetinizdeyiz</h1>
         <p>Profesyonel cephe danışmanlığı çözümleriyle yakında sizlerleyiz.</p>
         <div class="contact">
-            <p>Bize ulaşın: <a href="mailto:ozgun.aydin@cladeng.com">ozgun.aydin@cladeng.com</a></p>
+            <p>Bize ulaşın: <a href="mailto:info@cladeng.com">info@cladeng.com</a></p>
         </div>
     </div>
 </body>
