--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="overlay"></div>
-    <div class="content">
+    <div class="container">
         <img src="logo.png" alt="CLADENG Logo" class="logo">
         <h1>Yakında Hizmetinizdeyiz</h1>
         <p>Profesyonel cephe danışmanlığı çözümleriyle yakında sizlerleyiz.</p>
