--- a/index.html
+++ b/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
-<html lang="tr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yakında Hizmetinizdeyiz | CLADENG</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <div class="overlay"></div>
-    <div class="container">
-        <img src="logo.png" alt="CLADENG Logo" class="logo">
-        <h1>Yakında Hizmetinizdeyiz</h1>
-        <p>Profesyonel cephe danışmanlığı çözümleriyle yakında sizlerleyiz.</p>
-        <div class="contact">
-            <p>Bize ulaşın: <a href="mailto:ozgun.aydin@cladeng.com">ozgun.aydin@cladeng.com</a></p>
-        </div>
+<html>
+  <head>
+    <title>Yakında</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
+  <body>
+    <div class="logo">
+      </div>
+    <div class="yakinda">
+      <h1>Yakında Hizmetinizdeyiz</h1>
     </div>
-</body>
+    <div class="iletisim">
+      <p>İletişim için:</p>
+      <p>e-posta@adresiniz.com</p>
+    </div>
+  </body>
 </html>
