--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Yakında</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-  </head>
-  <body>
-    <div class="logo">
-      </div>
-    <div class="yakinda">
-      <h1>Yakında Hizmetinizdeyiz</h1>
+<html lang="tr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CLADENG - Yakında Hizmetinizdeyiz</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <header>
+            <img src="logo.png" alt="CLADENG Logo" class="logo">
+            <h1>CLADENG</h1>
+        </header>
+        <main>
+            <h2>Yakında Hizmetinizdeyiz</h2>
+            <p>Web sitemiz yapım aşamasında. Bize ulaşmak için aşağıdaki e-posta adresini kullanabilirsiniz:</p>
+            <p><a href="mailto:ozgun.aydin@cladeng.com">ozgun.aydin@cladeng.com</a></p>
+        </main>
+        <footer>
+            <p>&copy; 2025 CLADENG. Tüm hakları saklıdır.</p>
+        </footer>
     </div>
-    <div class="iletisim">
-      <p>İletişim için:</p>
-      <p>e-posta@adresiniz.com</p>
-    </div>
-  </body>
+</body>
 </html>
