--- a/index.html
+++ b/index.html
@@ -1,25 +1,40 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CLADENG - Yakında Hizmetinizdeyiz</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hizmetinizdeyiz - Cephe Danışmanlığı</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <header>
-            <img src="logo.png" alt="CLADENG Logo" class="logo">
-            <h1>CLADENG</h1>
-        </header>
-        <main>
-            <h2>Yakında Hizmetinizdeyiz</h2>
-            <p>Web sitemiz yapım aşamasında. Bize ulaşmak için aşağıdaki e-posta adresini kullanabilirsiniz:</p>
-            <p><a href="mailto:ozgun.aydin@cladeng.com">ozgun.aydin@cladeng.com</a></p>
-        </main>
-        <footer>
-            <p>&copy; 2025 CLADENG. Tüm hakları saklıdır.</p>
-        </footer>
+  <!-- Header Başlangıcı -->
+  <header>
+    <div class="logo">
+      <img src="logo.png" alt="Şirket Logosu"> <!-- Logoyu burada değiştirirsiniz -->
     </div>
+    <div class="header-text">
+      <h1>Yakında Hizmetinizdeyiz</h1>
+      <p>Cephe Danışmanlığı</p>
+    </div>
+  </header>
+
+  <!-- Ana İçerik Bölümü -->
+  <main>
+    <section class="intro">
+      <h2>Hakkımızda</h2>
+      <p>Şirketimiz, inşaat sektöründe kaliteli cephe danışmanlık hizmetleri sunmaktadır. Profesyonel ekibimizle size en iyi hizmeti sağlamayı hedefliyoruz.</p>
+    </section>
+
+    <section class="contact">
+      <h2>Bize Ulaşın</h2>
+      <p>İletişime geçmek için aşağıdaki e-posta adresinden bize ulaşabilirsiniz:</p>
+      <p><a href="mailto:ozgun.aydin@cladeng.com">ozgun.aydin@cladeng.com</a></p>
+    </section>
+  </main>
+
+  <!-- Footer Bölümü -->
+  <footer>
+    <p>&copy; 2025 Cephe Danışmanlığı | Tüm hakları saklıdır.</p>
+  </footer>
 </body>
 </html>
