--- a/index.html
+++ b/index.html
@@ -4,31 +4,39 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hizmetinizdeyiz - Cephe Danışmanlığı</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Header Başlangıcı -->
+  <!-- Header Bölümü -->
   <header>
-    <div class="logo">
-      <img src="logo.png" alt="Şirket Logosu"> <!-- Logoyu burada değiştirirsiniz -->
-    </div>
-    <div class="header-text">
-      <h1>Yakında Hizmetinizdeyiz</h1>
-      <p>Cephe Danışmanlığı</p>
+    <div class="header-content">
+      <div class="logo">
+        <img src="logo.png" alt="Şirket Logosu">
+      </div>
+      <div class="header-text">
+        <h1>Yakında Hizmetinizdeyiz</h1>
+        <p>Cephe Danışmanlığı</p>
+      </div>
     </div>
   </header>
 
-  <!-- Ana İçerik Bölümü -->
+  <!-- Ana İçerik Bölümü: Grid Yapısı -->
   <main>
-    <section class="intro">
-      <h2>Hakkımızda</h2>
-      <p>Şirketimiz, inşaat sektöründe kaliteli cephe danışmanlık hizmetleri sunmaktadır. Profesyonel ekibimizle size en iyi hizmeti sağlamayı hedefliyoruz.</p>
-    </section>
-
-    <section class="contact">
-      <h2>Bize Ulaşın</h2>
-      <p>İletişime geçmek için aşağıdaki e-posta adresinden bize ulaşabilirsiniz:</p>
-      <p><a href="mailto:ozgun.aydin@cladeng.com">ozgun.aydin@cladeng.com</a></p>
+    <section class="grid-container">
+      <div class="grid-item image-container">
+        <img src="background.jpg" alt="Cephe Danışmanlığı" class="background-image">
+        <div class="image-overlay"></div>
+      </div>
+      <div class="grid-item text-container">
+        <h2>Hakkımızda</h2>
+        <p>Şirketimiz, inşaat sektöründe kaliteli cephe danışmanlık hizmetleri sunmaktadır. Profesyonel ekibimizle size en iyi hizmeti sağlamayı hedefliyoruz. Alanında uzman kadromuz ve güvenilir çözümlerimizle sektördeki lider konumumuzu pekiştirmekteyiz.</p>
+      </div>
+      <div class="grid-item contact-container">
+        <h2>Bize Ulaşın</h2>
+        <p>İletişime geçmek için aşağıdaki e-posta adresinden bize ulaşabilirsiniz:</p>
+        <p><a href="mailto:ozgun.aydin@cladeng.com">ozgun.aydin@cladeng.com</a></p>
+      </div>
     </section>
   </main>
 
