--- a/index.html
+++ b/index.html
@@ -14,10 +14,6 @@
       <div class="logo">
         <img src="logo.png" alt="Şirket Logosu">
       </div>
-      <div class="header-text">
-        <h1>Yakında Hizmetinizdeyiz</h1>
-        <p>Cephe Danışmanlığı</p>
-      </div>
     </div>
   </header>
 
@@ -29,12 +25,12 @@
         <div class="image-overlay"></div>
       </div>
       <div class="grid-item text-container">
-        <h2>Hakkımızda</h2>
-        <p>Şirketimiz, inşaat sektöründe kaliteli cephe danışmanlık hizmetleri sunmaktadır. Profesyonel ekibimizle size en iyi hizmeti sağlamayı hedefliyoruz. Alanında uzman kadromuz ve güvenilir çözümlerimizle sektördeki lider konumumuzu pekiştirmekteyiz.</p>
+        <h2>Yakında Hizmetinizdeyiz</h2>
+        <p>Sitemiz yapım aşamasındadır. Yakında daha fazla bilgi ve hizmet için bizimle iletişime geçebilirsiniz.</p>
       </div>
       <div class="grid-item contact-container">
-        <h2>Bize Ulaşın</h2>
-        <p>İletişime geçmek için aşağıdaki e-posta adresinden bize ulaşabilirsiniz:</p>
+        <h2>İletişim</h2>
+        <p>Bizimle iletişime geçmek için aşağıdaki e-posta adresini kullanabilirsiniz:</p>
         <p><a href="mailto:ozgun.aydin@cladeng.com">ozgun.aydin@cladeng.com</a></p>
       </div>
     </section>
