--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
   <main>
     <section class="grid-container">
       <div class="grid-item image-container">
-        <img src="background.jpg" alt="Cephe Danışmanlığı" class="background-image">
         <div class="image-overlay"></div>
       </div>
       <div class="grid-item text-container">
-        <h2>Yakında Hizmetinizdeyiz</h2>
-        <p>Sitemiz yapım aşamasındadır. Yakında daha fazla bilgi ve hizmet için bizimle iletişime geçebilirsiniz.</p>
+        <h2>Yakında Hizmetinizdeyiz!</h2>
+        <p>Sitemiz yapım aşamasındadır. Yakında hizmetinizde olacağız.</p>
       </div>
       <div class="grid-item contact-container">
         <h2>İletişim</h2>
