--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
       <div class="grid-item text-container">
         <h2>Yakında Hizmetinizdeyiz!</h2>
-        <p>Sitemiz yapım aşamasındadır. Yakında hizmetinizde olacağız.</p>
+        <p>Sitemiz yapım aşamasındadır, yakında hizmetinizde olacağız.</p>
       </div>
       <div class="grid-item contact-container">
         <h2>İletişim</h2>
