--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
         <p><a href="mailto:ozgun.aydin@cladeng.com">ozgun.aydin@cladeng.com</a></p>
       </div>
     </section>
+
+    <!-- Şehir Silüeti Görseli -->
+    <div class="city-silhouette">
+      <img src="city-silhouette.png" alt="City Silhouette" class="city-image">
+    </div>
   </main>
 
   <!-- Footer Bölümü -->
