--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
       </div>
     </section>
 
-    <!-- Şehir Silüeti Görseli -->
-    <div class="city-silhouette">
-      <img src="city-silhouette.png" alt="City Silhouette" class="city-image">
+    <!-- Sosyal Medya Butonları -->
+    <div class="social-media-buttons">
+      <a href="https://www.facebook.com" target="_blank" class="social-button facebook">Facebook</a>
+      <a href="https://twitter.com" target="_blank" class="social-button twitter">Twitter</a>
+      <a href="https://www.instagram.com" target="_blank" class="social-button instagram">Instagram</a>
     </div>
   </main>
 
