--- a/index.html
+++ b/index.html
@@ -19,3 +19,34 @@
 
   <!-- Ana İçerik Bölümü: Grid Yapısı -->
   <main>
+    <section class="grid-container">
+      <div class="grid-item image-container">
+        <div class="image-overlay"></div>
+      </div>
+      <div class="grid-item text-container">
+        <h2>Yakında Hizmetinizdeyiz!</h2>
+        <p>Sitemiz yapım aşamasındadır, yakında hizmetinizde olacağız.</p>
+      </div>
+      <div class="grid-item contact-container">
+        <h2>İletişim</h2>
+        <p>Bizimle iletişime geçmek için aşağıdaki e-posta adresini kullanabilirsiniz:</p>
+        <p><a href="mailto:ozgun.aydin@cladeng.com">ozgun.aydin@cladeng.com</a></p>
+      </div>
+    </section>
+
+    <!-- Geri Sayım (Countdown) -->
+    <div class="countdown-container">
+      <h3>Sitemiz Yakında Yayında!</h3>
+      <p>Başlamasına kalan süre:</p>
+      <div id="countdown"></div>
+    </div>
+  </main>
+
+  <!-- Footer Bölümü -->
+  <footer>
+    <p>&copy; 2025 Cephe Danışmanlığı | Tüm hakları saklıdır.</p>
+  </footer>
+
+  <script src="countdown.js"></script>
+</body>
+</html>
