--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@
       </div>
     </section>
 
-    <!-- Geri Sayım (Countdown) -->
+    <!-- Minimalist Geri Sayım (Countdown) -->
     <div class="countdown-container">
-      <h3>Sitemiz Yakında Yayında!</h3>
-      <p>Başlamasına kalan süre:</p>
+      <p>Sitemiz Yakında Yayında!</p>
       <div id="countdown"></div>
     </div>
   </main>
