--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Hizmetinizdeyiz - Cephe Danışmanlığı</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
+  <script src="https://kit.fontawesome.com/a076d05399.js"></script> <!-- Font Awesome ekledik -->
 </head>
 <body>
   <!-- Header Bölümü -->
@@ -34,10 +35,11 @@
       </div>
     </section>
 
-    <!-- Minimalist Geri Sayım (Countdown) -->
-    <div class="countdown-container">
-      <p>Sitemiz Yakında Yayında!</p>
-      <div id="countdown"></div>
+    <!-- LinkedIn Butonu -->
+    <div class="linkedin-container">
+      <a href="https://www.linkedin.com/company/cladeng" target="_blank" class="linkedin-button">
+        <i class="fab fa-linkedin"></i> <!-- FontAwesome LinkedIn ikonu -->
+      </a>
     </div>
   </main>
 
@@ -45,7 +47,5 @@
   <footer>
     <p>&copy; 2025 Cephe Danışmanlığı | Tüm hakları saklıdır.</p>
   </footer>
-
-  <script src="countdown.js"></script>
 </body>
 </html>
