--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <title>Hizmetinizdeyiz - Cephe Danışmanlığı</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
-  <!-- FontAwesome Kütüphanesini Doğru Şekilde Ekliyoruz -->
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script> 
+  <script src="https://kit.fontawesome.com/a076d05399.js"></script> <!-- Font Awesome ekledik -->
 </head>
 <body>
   <!-- Header Bölümü -->
