--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
   <!-- Footer Bölümü -->
   <footer>
-    <p>&copy; 2025 Cephe Danışmanlığı | Tüm hakları saklıdır.</p>
+    <p>&copy; 2025 CLADENG | Tüm hakları saklıdır.</p>
   </footer>
 </body>
 </html>
